# cs-board-tools

./: .gitignore  README.md  pyproject.toml
.github/: config.yml
.github/workflows/: build_docs.yml  run_tests.yml
cs_board_tools/: __init__.py  errors.py
cs_board_tools/cli/: README.md  __init__.py  bundle.py  descriptor.py  frb.py
cs_board_tools/io/: README.md  __init__.py  bundle.py  frb.py  yaml.py
cs_board_tools/queries/: __init__.py
cs_board_tools/queries/frb/: __init__.py  squaretype.py
cs_board_tools/schema/: __init__.py  analysis.py  bundle.py  descriptor.py  frb.py  validation.py
cs_board_tools/utilities/: __init__.py  collections.py  filesystem.py  yaml.py  zip.py
cs_board_tools/validation/: README.md  __init__.py  board.py  consistency.py  doors.py  filesystem.py  main.py  music.py  naming.py  network.py  paths.py  results.py  venture.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  getting-started.md  home.md  index.rst  roadmap.md  usage.md
docs/source/_templates/: class.rst  function.rst  module.rst
tests/artifacts/: WiiU.frb  WiiU.yaml
tests/loading/: test_bundle.py  test_frb.py  test_yaml.py  test_zip.py
tests/validation/: test_validation.py
